@@ -1,6 +1,8 @@
 ver 0.21.5 (not yet released)
 * protocol
   - fix deadlock in "albumart" command
+* input
+  - buffer: fix crash bug when playing remote WAV file
 * tags
   - ape: map "Album Artist"
 * output
